[package]
name = "grpc-experiments-server-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.11"
prost = "0.12"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1"
async-stream = "0.3"
rand = "0.8.5"

[build-dependencies]
tonic-build = "0.11"

[[bin]] # Bin to run the  gRPC server
name = "server"
path = "src/server.rs"

[[bin]] # Bin to run the  gRPC client
name = "client"
path = "src/client.rs"